--- a/wrangle_act.ipynb
+++ b/wrangle_act.ipynb
@@ -576,7 +576,9 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "name": "stdout",
