docs: update insight 4 description

--- a/wrangle_act.ipynb
+++ b/wrangle_act.ipynb
@@ -7985,7 +7985,7 @@
    "metadata": {},
    "source": [
     "#### Insight 1 :\n",
-    "Beyond 100 000 favourites count, we have more doggo(2) than puppo(1) and fluffer(1). So it seems that it is better be a doggo to the road to the success here !  \n"
+    "Beyond 100 000 favourites count, we have more doggo(2) than puppo(1) and pupper(1). So it seems that it is better be a doggo to the road to the success here !  \n"
    ]
   },
   {
@@ -8332,7 +8332,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "There might me other elements which are not in the scope of this study: colors and the quality of the images."
+    "We observe in the dataset, that the successful doggo are shared as videos. So this is an important factor because videos transmit emotions. \n",
+    "So there might me other elements which are not in the scope of this study: colors and the quality of the images or videos."
    ]
   },
   {
@@ -8561,7 +8562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 166,
    "metadata": {},
    "outputs": [
     {
@@ -8570,7 +8571,7 @@
        "0"
       ]
      },
-     "execution_count": 164,
+     "execution_count": 166,
      "metadata": {},
      "output_type": "execute_result"
     }
