fix: updated to reflect modifications in wrangle_act

--- a/wrangle_report.ipynb
+++ b/wrangle_report.ipynb
@@ -168,14 +168,15 @@
     "#### Quality issues identified :\n",
     "1. The WeRateDgos twitter archive enhanced contains retweets, which could not be part or our study\n",
     "2. The WeRateDgos twitter archive enhanced has 59 missing value from the \"expanded_urls\" column\n",
-    "3. In the The WeRateDgos twitter archive, some rating numerators are too high and does not make sense regarding the denominator value.\n",
+    "3. REMOVED ! - This quality is no longer part of our study -\n",
     "4. WeRateDgos twitter archive - in some cases, the relevant rating information, consequently rating_numerator and rating_denominator, have not been extracted.\n",
     "5. WeRateDgos twitter archive - We have \"None\" as name even if, sometimes, there is an available name in the text. So few names are missing and could be retrieved.\n",
     "6. WeRateDgos twitter archive - We have missing dog stages, meaning stages not properly extracted. This is the case for \"puppo\", \"doggo\" and \"pupper\".\n",
     "7. WeRateDgos twitter archive - \"expanded_urls\" column contains duplicated urls.\n",
     "8. WeRateDgos twitter archive - timestamp is using string type.\n",
     "9. Tweets images predictions - We have rows which are not dogs images predictions.\n",
-    "10. Data retrieved via twitter API - \"created_at\" column type is not timestamp."
+    "10. Data retrieved via twitter API - \"created_at\" column type is not timestamp.\n",
+    "11. Tweets images predictions - predictions and the associated confidences are spread over several columns."
    ]
   },
   {
@@ -201,7 +202,7 @@
     "#### Approach\n",
     "1. First, we address the missing data and completness issues (Quality issues 1, 2, 4, 5, 6, 9)\n",
     "2. Then we resolve the tidiness problems we identified.\n",
-    "3. Finally we will correct the quality issues (Quality issues 3, 7, 8, 10)"
+    "3. Finally we will correct the quality issues (Quality issues 7, 8, 10)"
    ]
   },
   {
@@ -255,16 +256,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Merging the twitter enhanced archive dataframe and the twitter dataframe built from the APIs"
+    "#### Merging all the 3 datasets for a master dataset"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "There is no need to have 2 dataframes for those informations. So we merge the twitter enhanced archive already cleaned `df_archive_clean` with the data collected via a twitter API, also already cleaned `df_twitter_clean`.   \n",
-    "From `df_twitter_clean`, we add the columns retweet_count and favorite_count to `df_archive_clean`.  \n",
-    "We keep the prediction dataframe `df_image_clean` as standalone. We may have several images for the same tweet. So any required image could be referenced based on the tweet_id."
+    "We merge the twitter enhanced archive already cleaned `df_archive_clean` with the data collected via a twitter API, also already cleaned `df_twitter_clean`.   \n",
+    "Then we merge the result to the prediction dataframe `df_image_clean`.\n",
+    "All on the `tweet_id` column."
    ]
   },
   {
@@ -285,8 +286,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. We store the dataframes into csv files: the twitter data in `twitter_archive_master.csv` and the images predictions data in `images_prediction_cleaned.csv`\n",
-    "2. We store the dataframes into SQLite database.  \n",
+    "1. We store the master dataframe into a csv files:  `twitter_archive_master.csv` \n",
+    "2. We also store the dataframes into a SQLite database.  \n",
     "We've learnt the way to do from here : https://stackoverflow.com/questions/50803109/how-to-store-pandas-dataframe-in-sqlite-db#50803252"
    ]
   },
@@ -307,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -316,7 +317,7 @@
        "0"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
